Replace deprecated constructors by valueOf
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>
(cherry picked from commit 71285eec9e3c3837cd56736a7e5ba8771cfb41a0)