@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2020 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2021 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -51,7 +51,7 @@ public class ComplexUpdateTest extends WriteObjectTest {
     }
 
     public String getName() {
-        return super.getName() + new Boolean(usesUnitOfWork) + new Boolean(usesNestedUnitOfWork);
+        return super.getName() + Boolean.valueOf(usesUnitOfWork) + Boolean.valueOf(usesNestedUnitOfWork);
     }
 
     public void reset() {
