@@ -1,6 +1,6 @@
 /*
- * Copyright (c) 1998, 2019 Oracle and/or its affiliates. All rights reserved.
- * Copyright (c) 1998, 2019 IBM Corporation. All rights reserved.
+ * Copyright (c) 1998, 2021 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2021 IBM Corporation. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -1928,7 +1928,7 @@ public class ProjectClassGenerator {
         }
 
         if (value instanceof Character) {
-            return "new Character('" + value + "')";
+            return "Character.valueOf('" + value + "')";
         }
 
         //Bug2662265
