@@ -1,6 +1,6 @@
 /*
  * Copyright (c) 1998, 2021 Oracle and/or its affiliates. All rights reserved.
- * Copyright (c) 1998, 2019 IBM Corporation. All rights reserved.
+ * Copyright (c) 1998, 2021 IBM Corporation. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -1318,8 +1318,8 @@ public class EntityManagerJUnitTestSuite extends JUnitTestCase {
         int lastIndex = firstName.length();
         List employees = em.createQuery("SELECT object(e) FROM Employee e where e.firstName = substring(:p1, :p2, :p3)").
             setParameter("p1", firstName).
-            setParameter("p2", new Integer(firstIndex)).
-            setParameter("p3", new Integer(lastIndex)).
+            setParameter("p2", Integer.valueOf(firstIndex)).
+            setParameter("p3", Integer.valueOf(lastIndex)).
             getResultList();
 
         // clean up
@@ -5848,17 +5848,17 @@ public class EntityManagerJUnitTestSuite extends JUnitTestCase {
         assertTrue("FETCH_GROUP not set.", olrQuery.getFetchGroup() == fetchGroup);
 
         // Timeout
-        query.setHint(QueryHints.JDBC_TIMEOUT, new Integer(100));
+        query.setHint(QueryHints.JDBC_TIMEOUT, Integer.valueOf(100));
         assertTrue("Timeout not set.", olrQuery.getQueryTimeout() == 100);
 
         // JDBC
-        query.setHint(QueryHints.JDBC_FETCH_SIZE, new Integer(101));
+        query.setHint(QueryHints.JDBC_FETCH_SIZE, Integer.valueOf(101));
         assertTrue("Fetch-size not set.", olrQuery.getFetchSize() == 101);
 
-        query.setHint(QueryHints.JDBC_MAX_ROWS, new Integer(103));
+        query.setHint(QueryHints.JDBC_MAX_ROWS, Integer.valueOf(103));
         assertTrue("Max-rows not set.", olrQuery.getMaxRows() == 103);
 
-        query.setHint(QueryHints.JDBC_FIRST_RESULT, new Integer(123));
+        query.setHint(QueryHints.JDBC_FIRST_RESULT, Integer.valueOf(123));
         assertTrue("JDBC_FIRST_RESULT not set.", olrQuery.getFirstResult() == 123);
 
         // Refresh
@@ -7419,7 +7419,7 @@ public class EntityManagerJUnitTestSuite extends JUnitTestCase {
         em = createEntityManager();
         beginTransaction(em);
         try {
-            employee = em.find(Employee.class, new Integer(id));
+            employee = em.find(Employee.class, Integer.valueOf(id));
             address = employee.getAddress();
 
             assertTrue("The address was not persisted.", employee.getAddress() != null);
@@ -7461,7 +7461,7 @@ public class EntityManagerJUnitTestSuite extends JUnitTestCase {
         int managerId = manager.getId();
 
         beginTransaction(em);
-        employee = em.find(Employee.class, new Integer(id));
+        employee = em.find(Employee.class, Integer.valueOf(id));
         employee.getAddress();
 
         address = new Address();
@@ -7485,7 +7485,7 @@ public class EntityManagerJUnitTestSuite extends JUnitTestCase {
         em = createEntityManager();
         beginTransaction(em);
 
-        employee = em.find(Employee.class, new Integer(id));
+        employee = em.find(Employee.class, Integer.valueOf(id));
         address = employee.getAddress();
         manager = employee.getManager();
 
@@ -7495,8 +7495,8 @@ public class EntityManagerJUnitTestSuite extends JUnitTestCase {
         assertTrue("The manager was not persisted.", employee.getManager() != null);
         assertTrue("The manager was not correctly persisted.", employee.getManager().getFirstName().equals("Metro"));
 
-        Address initialAddress = em.find(Address.class, new Integer(addressId));
-        Employee initialManager = em.find(Employee.class, new Integer(managerId));
+        Address initialAddress = em.find(Address.class, Integer.valueOf(addressId));
+        Employee initialManager = em.find(Employee.class, Integer.valueOf(managerId));
         employee.setAddress((Address)null);
         employee.setManager((Employee)null);
         em.remove(address);
@@ -7561,7 +7561,7 @@ public class EntityManagerJUnitTestSuite extends JUnitTestCase {
         em = createEntityManager();
         beginTransaction(em);
 
-        employee = em.find(Employee.class, new Integer(id));
+        employee = em.find(Employee.class, Integer.valueOf(id));
         address = employee.getAddress();
         manager = employee.getManager();
 
@@ -7571,8 +7571,8 @@ public class EntityManagerJUnitTestSuite extends JUnitTestCase {
         assertTrue("The manager was not persisted.", employee.getManager() != null);
         assertTrue("The manager was not correctly persisted.", employee.getManager().getFirstName().equals("Metro"));
 
-        Address initialAddress = em.find(Address.class, new Integer(addressId));
-        Employee initialManager = em.find(Employee.class, new Integer(managerId));
+        Address initialAddress = em.find(Address.class, Integer.valueOf(addressId));
+        Employee initialManager = em.find(Employee.class, Integer.valueOf(managerId));
         employee.setAddress((Address)null);
         employee.setManager((Employee)null);
         em.remove(address);
@@ -7614,7 +7614,7 @@ public class EntityManagerJUnitTestSuite extends JUnitTestCase {
         em = createEntityManager();
 
         beginTransaction(em);
-        employee = em.find(Employee.class, new Integer(id));
+        employee = em.find(Employee.class, Integer.valueOf(id));
         employee.getAddress();
         employee.getManager();
 
@@ -7638,7 +7638,7 @@ public class EntityManagerJUnitTestSuite extends JUnitTestCase {
 
         em = createEntityManager();
         beginTransaction(em);
-        employee = em.find(Employee.class, new Integer(id));
+        employee = em.find(Employee.class, Integer.valueOf(id));
         address = employee.getAddress();
         manager = employee.getManager();
 
@@ -7648,8 +7648,8 @@ public class EntityManagerJUnitTestSuite extends JUnitTestCase {
         assertTrue("The manager was not persisted.", employee.getManager() != null);
         assertTrue("The manager was not correctly persisted.", employee.getManager().getFirstName().equals("Metro"));
 
-        Address initialAddress = em.find(Address.class, new Integer(addressId));
-        Employee initialManager = em.find(Employee.class, new Integer(managerId));
+        Address initialAddress = em.find(Address.class, Integer.valueOf(addressId));
+        Employee initialManager = em.find(Employee.class, Integer.valueOf(managerId));
 
         employee.setAddress((Address)null);
         employee.setManager((Employee)null);
@@ -8418,7 +8418,7 @@ public class EntityManagerJUnitTestSuite extends JUnitTestCase {
             errorMsg = errorMsg + "; em.getDelegate() threw wrong exception: " + ex.getMessage();
         }
         try {
-            em.getReference(Employee.class, new Integer(1));
+            em.getReference(Employee.class, Integer.valueOf(1));
             errorMsg = errorMsg + "; em.getReference() didn't throw exception";
         } catch(IllegalStateException ise) {
             // expected
